# Marron-machine

./: .gitignore  README.md  docker-compose.yaml
client/: .devcontainer.json  Dockerfile  package.json  vite.config.ts
client/src/: app.d.ts  app.html
client/src/lib/components/: Notification.svelte
client/src/lib/openapi/: models.ts  schemas.ts  services.ts
client/src/routes/: +layout.svelte  +layout.ts  +page.svelte  LogViewer.svelte
client/src/routes/account/: +page.svelte  UpdatePasswordModal.svelte
client/src/routes/action/: +page.svelte  ActionForms.svelte
client/src/routes/action/[action_id]/: +page.svelte  +page.ts
client/src/routes/action/new/: +page.svelte
client/src/routes/admin/: +page.svelte
client/src/routes/inventory/: +page.svelte
client/src/routes/inventory/[inventory_id]/: +page.svelte  +page.ts
client/src/routes/inventory/device/: +page.svelte
client/src/routes/inventory/new/: +page.svelte
client/src/routes/relay/: +page.svelte  RelayForms.svelte
client/src/routes/relay/[relay_id]/: +page.svelte  +page.ts
client/src/routes/relay/new/: +page.svelte
client/src/routes/signin/: +page.svelte
client/src/routes/signup/: +page.svelte
server/: .devcontainer.json  Dockerfile  docker-entrypoint.sh  pyproject.toml  test.py
server/marron_machine/: __init__.py  config.py  db.py  db_models.py
server/marron_machine/action/: dhcp.py  dns.py  ipmi.py  netbox.py  ping.py  runner.py
server/marron_machine/models/db/: __init__.py  action.py  inventory.py  ip_fields.py  policy.py  relay.py  target.py  user.py
server/marron_machine/models/request/: action.py  inventory.py  policy.py  relay.py  target.py
server/marron_machine/models/response/: action.py  history.py  inventory.py  policy.py  relay.py  target.py  user.py
server/marron_machine/routes/: __init__.py  action.py  auth.py  inventory.py  policy.py  relay.py  runner.py  target.py  user.py
server/marron_machine_runner/: __init__.py  model.py
server/migrations/models/: 0_20241129072611_init.py  1_20250118124717_update.py  2_20241017005132_update.py  2_20250217050020_update.py  3_20241018054504_update.py
